--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/themes/redefine"]
     path = src/themes/redefine
-    url = https://github.com/evannotfound/hexo-theme-redefine.git  # 需确保URL正确
+    url = https://github.com/evannotfound/hexo-theme-redefine.git
