--- a/src/_config.redefine.yml
+++ b/src/_config.redefine.yml
@@ -416,14 +416,14 @@ footer:
 # Docs: https://redefine-docs.ohevan.com/inject
 inject:
   # Whether to enable inject
-  enable: false
+  enable: true
   # Inject custom head html code
   head: 
-    -
+    - <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-MPBVW8Z9');</script>
     -
   # Inject custom footer html code
   footer:
-    -
+    - <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MPBVW8Z9" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     -
 # INJECT <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< end
 
