--- a/.github/workflows/deploy_hexo.yml
+++ b/.github/workflows/deploy_hexo.yml
@@ -30,4 +30,19 @@ jobs:
           publish_dir: ./src/public
           publish_branch: pages
           force_orphan: true
-    
+      
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+          endpoint-url: ${{ secrets.AWS_ENDPOINT_URL }} # 新增endpoint配置
+
+      - name: Empty S3 bucket
+        run: |
+          aws s3 rm s3://${{ secrets.S3_BUCKET }}/ --recursive
+
+      - name: Upload files to S3
+        run: |
+          aws s3 cp ./src/public s3://${{ secrets.S3_BUCKET }}/ --recursive    
