--- a/.github/workflows/deploy_hexo.yml
+++ b/.github/workflows/deploy_hexo.yml
@@ -37,12 +37,14 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
-          endpoint-url: ${{ secrets.AWS_ENDPOINT_URL }} # 新增endpoint配置
+          mask-aws-account-id: false 
 
       - name: Empty S3 bucket
         run: |
-          aws s3 rm s3://${{ secrets.S3_BUCKET }}/ --recursive
+          aws s3 rm s3://${{ secrets.S3_BUCKET }}/ --recursive \
+          --endpoint-url $AWS_ENDPOINT_URL # 显式指定endpoint
 
       - name: Upload files to S3
         run: |
-          aws s3 cp ./src/public s3://${{ secrets.S3_BUCKET }}/ --recursive    
+          aws s3 cp ./src/public s3://${{ secrets.S3_BUCKET }}/ --recursive \
+          --endpoint-url $AWS_ENDPOINT_URL # 显式指定endpoint
