--- a/.github/workflows/deploy_hexo.yml
+++ b/.github/workflows/deploy_hexo.yml
@@ -1,4 +1,4 @@
-name: Deploy to GitHub Pages
+name: Deploy to GitHub Pages and OSS
 
 on:
   push:
@@ -7,44 +7,43 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    env:
+      AWS_ENDPOINT_URL: ${{ secrets.AWS_ENDPOINT_URL }}
+      AWS_S3_USE_PATH_STYLE: true
+      AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_SESSION_TOKEN: ''
+
     steps:
-      # 检出代码
       - name: Checkout
         uses: actions/checkout@v4
 
-      # 设置 Node.js 环境
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '22'  # 可根据需要选择 Node.js 版本
+          node-version: '22'
 
-      # 执行构建脚本
       - name: Build
         run: sh build.sh
 
-      # 将 /src/public 目录内容推送到 pages 分支
+      # 部署到 GitHub Pages
       - name: Deploy to GitHub Pages
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./src/public
           publish_branch: pages
           force_orphan: true
-      
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
-          mask-aws-account-id: false 
 
+      # 部署到 OSS (移除了 configure-aws-credentials Action)
       - name: Empty S3 bucket
         run: |
           aws s3 rm s3://${{ secrets.S3_BUCKET }}/ --recursive \
-          --endpoint-url $AWS_ENDPOINT_URL # 显式指定endpoint
+          --endpoint-url $AWS_ENDPOINT_URL
 
       - name: Upload files to S3
         run: |
-          aws s3 cp ./src/public s3://${{ secrets.S3_BUCKET }}/ --recursive \
-          --endpoint-url $AWS_ENDPOINT_URL # 显式指定endpoint
+          aws s3 cp ./src/public/ s3://${{ secrets.S3_BUCKET }}/ --recursive \
+          --endpoint-url $AWS_ENDPOINT_URL
