--- a/.github/workflows/deploy_hexo.yml
+++ b/.github/workflows/deploy_hexo.yml
@@ -14,6 +14,8 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_SESSION_TOKEN: ''
+      AWS_SHA_256: UNSIGNED-PAYLOAD # 禁用SHA-256校验
+      AWS_S3_DISABLE_CHUNKED_ENCODING: true # 禁用分块编码
 
     steps:
       - name: Checkout
@@ -58,4 +60,5 @@ jobs:
           --endpoint-url $AWS_ENDPOINT_URL \
           --delete \
           --exclude ".git/*" \
-          --exclude "node_modules/*"
+          --exclude "node_modules/*" \
+          --no-progress # 减少日志输出
