--- a/.github/workflows/deploy_hexo.yml
+++ b/.github/workflows/deploy_hexo.yml
@@ -9,13 +9,18 @@ jobs:
     runs-on: ubuntu-latest
     env:
       AWS_ENDPOINT_URL: ${{ secrets.AWS_ENDPOINT_URL }}
-      AWS_S3_USE_PATH_STYLE: true
+      AWS_S3_USE_PATH_STYLE: "true"
       AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_SESSION_TOKEN: ''
-      AWS_SHA_256: UNSIGNED-PAYLOAD # 禁用SHA-256校验
-      AWS_S3_DISABLE_CHUNKED_ENCODING: true # 禁用分块编码
+      AWS_SESSION_TOKEN: ""
+      # 核心兼容性配置
+      AWS_SHA_256: "UNSIGNED-PAYLOAD"
+      AWS_S3_DISABLE_CHUNKED_ENCODING: "true"
+      # 强制使用签名版本4
+      AWS_SIGNATURE_VERSION: "s3v4"
+      # 禁用重试避免无限循环
+      AWS_MAX_ATTEMPTS: "1"
 
     steps:
       - name: Checkout
@@ -38,27 +43,48 @@ jobs:
           publish_branch: pages
           force_orphan: true
 
-      - name: Debug AWS Configuration
+      - name: Configure AWS CLI for OSS
         run: |
-          echo "AWS Configuration:"
-          echo "Endpoint: $AWS_ENDPOINT_URL"
-          echo "Region: $AWS_DEFAULT_REGION"
-          echo "Bucket: ${{ secrets.S3_BUCKET }}"
+          # 创建AWS配置文件
+          mkdir -p ~/.aws
+          cat > ~/.aws/config << 'EOF'
+          [default]
+          region = $AWS_DEFAULT_REGION
+          signature_version = s3v4
+          s3 =
+            signature_version = s3v4
+            use_path_style = $AWS_S3_USE_PATH_STYLE
+          EOF
+          
+          # 验证配置
+          cat ~/.aws/config
           aws --version
           aws configure list
 
       - name: Verify OSS Bucket Existence
         run: |
-          echo "Checking if bucket exists..."
-          aws s3 ls s3://${{ secrets.S3_BUCKET }}/ --endpoint-url $AWS_ENDPOINT_URL || \
+          echo "Checking bucket existence..."
+          aws s3 ls s3://${{ secrets.S3_BUCKET }} --endpoint-url $AWS_ENDPOINT_URL || \
           aws s3 mb s3://${{ secrets.S3_BUCKET }} --endpoint-url $AWS_ENDPOINT_URL
 
-      - name: Sync files to S3 (with deletion)
+      - name: Sync files to OSS (with retry)
         run: |
-          echo "Syncing files to bucket (deleting old files)..."
-          aws s3 sync ./src/public/ s3://${{ secrets.S3_BUCKET }}/ \
-          --endpoint-url $AWS_ENDPOINT_URL \
-          --delete \
-          --exclude ".git/*" \
-          --exclude "node_modules/*" \
-          --no-progress # 减少日志输出
+          echo "Uploading files with retry..."
+          # 尝试3次上传，每次间隔5秒
+          for i in {1..3}; do
+            echo "Attempt $i:"
+            aws s3 sync ./src/public/ s3://${{ secrets.S3_BUCKET }}/ \
+            --endpoint-url $AWS_ENDPOINT_URL \
+            --delete \
+            --exclude ".git/*" \
+            --exclude "node_modules/*" \
+            --no-verify-ssl \
+            --no-progress
+            
+            if [ $? -eq 0 ]; then
+              echo "Upload successful on attempt $i"
+              break
+            fi
+            echo "Upload failed, retrying in 5 seconds..."
+            sleep 5
+          done
