--- a/.github/workflows/deploy_hexo.yml
+++ b/.github/workflows/deploy_hexo.yml
@@ -9,18 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     env:
       AWS_ENDPOINT_URL: ${{ secrets.AWS_ENDPOINT_URL }}
-      AWS_S3_USE_PATH_STYLE: "true"
-      AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
+      S3_BUCKET: ${{ secrets.S3_BUCKET }}
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_SESSION_TOKEN: ""
-      # 核心兼容性配置
-      AWS_SHA_256: "UNSIGNED-PAYLOAD"
-      AWS_S3_DISABLE_CHUNKED_ENCODING: "true"
-      # 强制使用签名版本4
-      AWS_SIGNATURE_VERSION: "s3v4"
-      # 禁用重试避免无限循环
-      AWS_MAX_ATTEMPTS: "1"
+      AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
 
     steps:
       - name: Checkout
@@ -43,44 +35,31 @@ jobs:
           publish_branch: pages
           force_orphan: true
 
-      - name: Configure AWS CLI for OSS
+      - name: Install ossutil
         run: |
-          # 创建AWS配置文件
-          mkdir -p ~/.aws
-          cat > ~/.aws/config << 'EOF'
-          [default]
-          region = $AWS_DEFAULT_REGION
-          signature_version = s3v4
-          s3 =
-            signature_version = s3v4
-            use_path_style = $AWS_S3_USE_PATH_STYLE
-          EOF
-          
-          # 验证配置
-          cat ~/.aws/config
-          aws --version
-          aws configure list
+          curl -O https://gosspublic.alicdn.com/ossutil/1.7.16/ossutil64
+          chmod +x ossutil64
+          sudo mv ossutil64 /usr/local/bin/ossutil
 
-      - name: Verify OSS Bucket Existence
+      - name: Configure ossutil
         run: |
-          echo "Checking bucket existence..."
-          aws s3 ls s3://${{ secrets.S3_BUCKET }} --endpoint-url $AWS_ENDPOINT_URL || \
-          aws s3 mb s3://${{ secrets.S3_BUCKET }} --endpoint-url $AWS_ENDPOINT_URL
+          echo -e "[Credentials]
+language=EN
+endpoint=${AWS_ENDPOINT_URL}
+accessKeyID=${AWS_ACCESS_KEY_ID}
+accessKeySecret=${AWS_SECRET_ACCESS_KEY}" > ~/.ossutilconfig
+
+      - name: Delete existing OSS content
+        run: |
+          echo "Deleting all existing files in bucket..."
+          ossutil rm -rf oss://${S3_BUCKET}/
 
       - name: Sync files to OSS (with retry)
         run: |
           echo "Uploading files with retry..."
-          # 尝试3次上传，每次间隔5秒
           for i in {1..3}; do
             echo "Attempt $i:"
-            aws s3 sync ./src/public/ s3://${{ secrets.S3_BUCKET }}/ \
-            --endpoint-url $AWS_ENDPOINT_URL \
-            --delete \
-            --exclude ".git/*" \
-            --exclude "node_modules/*" \
-            --no-verify-ssl \
-            --no-progress
-            
+            ossutil cp -rf ./src/public/ oss://${S3_BUCKET}/
             if [ $? -eq 0 ]; then
               echo "Upload successful on attempt $i"
               break
