--- a/src/_config.redefine.yml
+++ b/src/_config.redefine.yml
@@ -403,7 +403,7 @@ footer:
   # Site statistics
   statistics: true # show site statistics or not (total articles, total words)
   # Footer message
-  customize:
+  customize: <a href="/sitemap.xml">Sitemap</a>
   # ICP record number. See https://beian.miit.gov.cn/
   icp:
     enable: true # Whether to enable
