--- a/src/_config.redefine.yml
+++ b/src/_config.redefine.yml
@@ -407,7 +407,7 @@ footer:
   # ICP record number. See https://beian.miit.gov.cn/
   icp:
     enable: true # Whether to enable
-    number: "豫ICP备2025132886号" # ICP record number
+    number: "豫ICP备2025132886号-1" # ICP record number
     url: "https://beian.miit.gov.cn/" #ICP record url
 # FOOTER <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< end
 
