--- a/.github/workflows/deplot_eo.yml
+++ b/.github/workflows/deplot_eo.yml
@@ -33,7 +33,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./src/public
-          publish_branch: cn-pages
+          publish_branch: eo-pages
           force_orphan: true
             fi
             echo "Upload failed, retrying in 5 seconds..."
